<resources>
    <string name="app_name" translatable="false">SecureGuard</string>
    <string name="Ok" translatable="false">@android:string/ok</string>
    <string name="loading">Loading…</string>
    <string name="help">Help</string>
    <string name="copied">Copied</string>
    <string name="paste" translatable="false">@android:string/paste</string>
    <string name="accept">accept</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="Edit">Edit</string>
    <string name="Add_Whitelist">Set</string>
    <string name="GPS">GPS</string>
    <string name="Cell">Cell</string>
    <string name="Listening">Listening to commands</string>
    <string name="AddConfig">Additional Config</string>
    <string name="Device_Protected">Your Device is Protected</string>
    <string name="Activate_Server">Fetch Server</string>
    <string name="Trusted_Number">Trusted Number</string>
    <string name="Active_hint">If the login and signup button is disabled, it means the web panel is inactive. If so, just tap the \"Fetch Server\" button</string>
    <string name="Trusted_Number_Description">Secureguard will send alerts to this number in case the simcard has changed.\n\n<b>You will not be needing this setting if you use E-SIM technology</b></string>
    <string name="Granted">Granted: </string>
    <string name="Info_CORE" translatable="false">CORE</string>
    <string name="Info_GPS" translatable="false">GPS</string>
    <string name="Info_DND" translatable="false">DND</string>
    <string name="Info_DEVICE_ADMIN" translatable="false">DeviceAdmin</string>
    <string name="Info_Overlay" translatable="false">Overlay</string>
    <string name="Info_SecureSettings" translatable="false">SecureSettings</string>
    <string name="Info_Notification_Access">Notification Access</string>
    <string name="Info_Camera" translatable="false">Camera</string>
    <string name="Info_FMD_Command">Prefix:</string>
    <string name="Info_Server_Enabled">Web Panel</string>
    <string name="Info_Server_Registered">Registered:</string>
    <string name="Info_Server_Push">Push:</string>
    <string name="Settings_Settings">Settings</string>
    <string name="Settings_FMDConfig">SecureGuard-Config</string>
    <string name="Settings_FMDServer" translatable="false">SecureGuard Server</string>
    <string name="Settings_WhiteList">SMS Whitelist</string>
    <string name="Settings_OpenCellId">OpenCelliD</string>
    <string name="Settings_Permissions">Review Permissions</string>
    <string name="Settings_Import">Import Settings</string>
    <string name="Settings_Export">Export Settings</string>
    <string name="Settings_Logs">Logs</string>
    <string name="Settings_About">About</string>
    <string name="Settings_FMD_via_Pin_Description">Allows you to communicate with SecureGuard via a pin. You will be added to a temporary allowlist.</string>
    <string name="Settings_Pin_Description">Used as confirmation before wiping the device or for temporary usage of the service.</string>
    <string name="Settings_Enter_Pin">Enter Pin</string>
    <string name="pin">Enter your PIN</string>
    <string name="pin_repeat">Repeat PIN</string>
    <string name="Settings_FMDCommand_Description">The command used to communicate with the SecureGuard application.</string>
    <string name="Settings_Trusted_Number_Description">Enter your recovery number to receive a notification if your SIM card changes.</string>
    <string name="Settings_Ringer_Tone_Description">Select a ringtone that will be played when "/sg ring" is sent.</string>
    <string name="Settings_Select_Ringtone">Select Ringtone</string>
    <string name="Settings_Lockscreenmessage_Description">Lock Screen Message:\nWhen locking the device, this message will appear on the lock screen.</string>
    <string name="Settings_FMD_Server_General">Server Info</string>
    <string name="Settings_FMD_Server_Server_URL">Server URL:</string>
    <string name="Settings_FMD_Server_User_ID">User ID:</string>
    <string name="Settings_FMD_Server_ID_Desc">You need the user ID to find your device with SecureGuard Server. Write it down and keep it safe.</string>
    <string name="Settings_FMDServer_Change_Password_Button">Change Password</string>
    <string name="Settings_FMDServer_Logout_Button">Log out</string>
    <string name="Settings_FMDServer_Delete_Button">Delete Data</string>
    <string name="Settings_FMDServer_Alert_DeleteData">Delete Data</string>
    <string name="Settings_FMDServer_Alert_DeleteData_Desc">This will delete all data from the Server! Are you sure?</string>
    <string name="Settings_FMDServer_Push_Description_Missing">Sending commands from SecureGuard Server to your phone requires a UnifiedPush distributor app. Install one, and then return here. It will automatically be detected.</string>
    <string name="Settings_FMDServer_Push_Description_Available">Successfully registered for push notifications.</string>
    <string name="Settings_FMDServer_Push_Open_UP">Open UnifiedPush Website</string>
    <string name="Settings_FMDServer_Update_Interval_Title">Update Interval</string>
    <string name="Settings_FMDServer_Update_Interval_Description">SecureGuard uploads the device\'s location every X minutes.</string>
    <string name="Settings_FMDServer_Location_Type_Title">Location Source</string>
    <string name="Settings_FMDServer_Location_Type_Description">If none is selected, no locations are uploaded regularly. (You can still use the web interface to force an upload. This requires push.)</string>
    <string name="Settings_FMDServer_LOW_BAT_Upload_Title">Upload on Low Battery</string>
    <string name="Settings_FMDServer_LOW_BAT_Upload_Description">Upload the location of this device when the battery level goes low. This requires Notification Access.</string>
    <string name="password_old">Old Password</string>
    <string name="password_new">New Password</string>
    <string name="password_new_repeat">Repeat New Password</string>
    <string name="server_version">Server version</string>
    <string name="server_version_error">Error getting server version</string>
    <string name="server_version_error_low_version">At least server version {MIN} is required, but the selected server has version {CURRENT}. Continue at your own risk.</string>
    <string name="Settings_FMDServer_AddAccount">SecureGuard Server: Login/Register</string>
    <string name="Settings_FMDServer_Info">Using SecureGuard Server allows you to send commands over the internet from the server to the app. You can track the device location on a map and view pictures taken by the device.</string>
    <string name="Settings_FMDServer_open_website">Open SecureGuard Server Website</string>
    <string name="Settings_FMDServer_use_default_server">Use Secureguard\'s server</string>
    <string name="Settings_FMDServer_Login">Login</string>
    <string name="Settings_FMDServer_Register">Register</string>
    <string name="Settings_FMDServer_Alert_PrivacyPolicy_Title">Privacy Policy</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="registration_token">Registration Token</string>
    <string name="registration_token_hint">Private instances may require a secret token. Leave this empty if the instance is public.</string>
    <string name="Whitelist_help">The contacts in this list are allowed to send SecureGuard commands via SMS. Commands from everyone else will be ignored.</string>
    <string name="Whitelist_empty">No allowed contacts. Click the button to your contacts!</string>
    <string name="WhiteList_Add_Contact">Add</string>
    <string name="WhiteList_Select_Action">Select an action:</string>
    <string name="WhiteList_Select_Number">Select one of the phone numbers.</string>
    <string name="Alert_First_Time_contact_added">Congratulations. You have added your first contact. You can now communicate with SecureGuard by sending a SMS message that contains \"sg\" from the allowed phone number. When everything works, the application will respond.</string>
    <string name="OpenCellId_OpenCellId" translatable="false">OpenCelliD</string>
    <string name="OpenCellId_API_Key_Description" translatable="false">API Access Token:</string>
    <string name="OpenCellId_help">FMD can use the OpenCelliD service to get an approximate location based on the cell tower that the phone is connected to. An internet connection is required for every location query. You also need to create an account at OpenCelliD and get your own API Access Token.</string>
    <string name="OpenCellId_privacy">Privacy: keep in mind that OpenCelliD learns your current cell tower and thus your location with every API query.</string>
    <string name="OpenCellId_open_website">Open OpenCelliD website</string>
    <string name="OpenCellId_test_opencellid">Test OpenCelliD Connection</string>
    <string name="OpenCellId_test_no_connection">No cell connection</string>
    <string name="settings_exported">Settings exported</string>
    <string name="about">About</string>
    <string name="about_source_code">Source Code</string>
    <string name="about_wiki">Wiki</string>
    <string name="app_description">SecureGuard allows you to remotely locate your device. You can communicate with SecureGuard over SMS, instant messengers, or using SecureGuard Server. Locate your device, make it ring, lock it, or wipe it - all from remote.</string>
    <string name="notify_crypto_update_title">Action required</string>
    <string name="notify_crypto_update_text">You need to update some settings to continue using SecureGuard. Click to open.</string>
    <string name="server_unregister_failed_title">Unregistering failed</string>
    <string name="server_unregister_failed_body">Unregistering failed with the following error: {ERROR}\n\nYou can continue anyway, but your account might not have been deleted from the server. If you continue, your account will be deleted locally from this device.</string>
    <string name="server_unregister_continue_anyway">Continue anyway</string>
    <string name="server_unregister_dont_continue">Don\'t continue</string>
    <string name="Notification_Usage">Usage</string>
    <string name="Notification_Usage_Description">Notification about the service usage.</string>
    <string name="Notification_Lifecycle">Lifecycle</string>
    <string name="Notification_Lifecycle_Description">Notification about the Lifecycle of the Service.</string>
    <string name="Pin_Usage">PinUsage</string>
    <string name="Notification_Pin_Usage_Description">Notification about the pin usage.</string>
    <string name="Notification_Server">Server</string>
    <string name="NotificationServer_Description">Display notifications sent from the server.</string>
    <string name="Notification_Security">Security</string>
    <string name="Notification_Security_Description">Notifications about security updates</string>
    <string name="Notification_FAIL">Fail</string>
    <string name="Notification_Fail_Description">Notification when something fails, like the connection to SecureGuard server.</string>
    <string name="Permission_IGNORE_BATTERY_OPTIMIZATION">This application is supposed to work in the background. To ensure it works even when your phone is in standby, you need to turn off battery optimization for this app.</string>
    <string name="Info_BatteryOptimization" translatable="false">OptimizeBattery</string>
    <string name="Introduction_Give_Permission">Give Permission</string>
    <string name="Introduction_Next">Next</string>
    <string name="Enable">Enable</string>
    <string name="Introduction_Shizuku">Give via Shizuku</string>
    <string name="Introduction_Root">Give via Root</string>
</resources>