<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nud.secureguardtech.ui.settings.FMDServerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:fontFamily="@font/poppins_bold"
            android:text="Account Info"
            android:textColor="@color/colorAccent"
            android:textSize="33sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#ecf0f1"
            app:cardCornerRadius="@dimen/border_radius"
            app:contentPadding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/Settings_FMD_Server_User_ID"
                        android:textColor="@color/colorAccent"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/textViewUserId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/colorAccent"
                        android:textSize="25sp"
                        tools:text="abcdefgh" />

                    <ImageView
                        android:id="@+id/buttonCopyUserId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:padding="8dp"
                        android:src="@drawable/ic_content_copy" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/Settings_FMD_Server_Server_URL"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/textViewServerUrl"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/colorAccent"
                        tools:text="https://fmd.example.com" />

                    <ImageView
                        android:id="@+id/buttonCopyServerUrl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:padding="8dp"
                        android:src="@drawable/ic_content_copy" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:fontFamily="@font/poppins"
            android:text="@string/Settings_FMD_Server_ID_Desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/buttonChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:height="@dimen/button_height"
            android:backgroundTint="@color/colorDisabled"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:text="@string/Settings_FMDServer_Change_Password_Button"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/border_radius" />

        <Button
            android:id="@+id/buttonDeleteData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:height="@dimen/button_height"
            android:backgroundTint="@color/colorDisabled"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:text="@string/Settings_FMDServer_Delete_Button"
            android:textAllCaps="false"
            android:visibility="visible"
            app:cornerRadius="@dimen/border_radius"
            tools:visibility="visible" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#ecf0f1"
            app:cardCornerRadius="@dimen/border_radius"
            app:contentPadding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/Settings_FMDServer_Update_Interval_Title"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:fontFamily="@font/poppins"
                    android:text="@string/Settings_FMDServer_Update_Interval_Description" />

                <EditText
                    android:id="@+id/editTextFMDServerUpdateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:fontFamily="@font/poppins"
                    android:inputType="number"
                    android:maxLength="8"
                    android:text="0" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#ecf0f1"
            app:cardCornerRadius="@dimen/border_radius"
            app:contentPadding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/Settings_FMDServer_Location_Type_Title"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:fontFamily="@font/poppins"
                    android:text="@string/Settings_FMDServer_Location_Type_Description" />

                <CheckBox
                    android:id="@+id/checkBoxFMDServerGPS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/GPS" />

                <CheckBox
                    android:id="@+id/checkBoxFMDServerCell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/Cell" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:height="@dimen/button_height"
            android:backgroundTint="@color/colorDisabled"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:text="@string/Settings_FMDServer_Logout_Button"
            android:textAllCaps="false"
            android:visibility="gone"
            app:cornerRadius="@dimen/border_radius"
            tools:visibility="gone" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:fontFamily="@font/poppins_semibold"
            android:text="Push"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textPushHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:fontFamily="@font/poppins"
            android:text="@string/Settings_FMDServer_Push_Description_Missing"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonOpenUnifiedPush"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:text="@string/Settings_FMDServer_Push_Open_UP"
            android:visibility="gone" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#ecf0f1"
            app:cardCornerRadius="@dimen/border_radius"
            app:contentPadding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/Settings_FMDServer_LOW_BAT_Upload_Title"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:fontFamily="@font/poppins"
                    android:text="@string/Settings_FMDServer_LOW_BAT_Upload_Description" />

                <CheckBox
                    android:id="@+id/checkBoxFMDServerLowBatUpload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/Enable" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
