<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.IntroductionActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3mm"
            android:fontFamily="@font/poppins_semibold"
            android:text="..."
            android:textSize="16dp" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

        </LinearLayout>

        <Button
            android:id="@+id/buttonPermViaShizuku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="5dp"
            android:height="@dimen/button_height"
            android:text="@string/Introduction_Shizuku"
            android:visibility="invisible"
            app:cornerRadius="@dimen/border_radius" />

        <Button
            android:id="@+id/buttonPermViaRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="5dp"
            android:height="@dimen/button_height"
            android:text="@string/Introduction_Root"
            android:visibility="invisible"
            app:cornerRadius="@dimen/border_radius" />

        <Button
            android:id="@+id/buttonGivePermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="5dp"
            android:height="@dimen/button_height"
            android:text="@string/Introduction_Give_Permission"
            app:cornerRadius="@dimen/border_radius" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:height="@dimen/button_height"
            android:text="@string/Introduction_Next"
            app:cornerRadius="@dimen/border_radius" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>