<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_normal"
    tools:context=".ui.settings.AddAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/FMD.Text.SectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:fontFamily="@font/poppins_semibold"
            android:paddingTop="20dp"
            android:text="Setup Secureguard Server" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:fontFamily="@font/poppins"
            android:text="@string/Settings_FMDServer_Info"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:fontFamily="@font/poppins"
            android:text="@string/Active_hint"
            android:textSize="16sp"
            tools:text="@string/Active_hint" />

        <Button
            android:id="@+id/buttonUseDefaultServer"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:height="60dp"
            android:fontFamily="@font/poppins"
            android:text="@string/Activate_Server"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:visibility="visible"
            app:cornerRadius="15dp"
            tools:text="@string/Activate_Server"
            tools:visibility="visible" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/button_height"
            android:fontFamily="@font/poppins"
            android:text="@string/Settings_FMDServer_Login"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_small"
            android:height="@dimen/button_height"
            android:fontFamily="@font/poppins"
            android:text="@string/Settings_FMDServer_Register"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1mm"
            android:fontFamily="@font/poppins"
            android:text="Server URL"
            android:visibility="invisible"
            tools:visibility="invisible" />

        <EditText
            android:id="@+id/editTextServerUrl"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginBottom="@dimen/margin_small"
            android:fontFamily="@font/poppins"
            android:visibility="invisible"
            tools:text="https://fmd.example.com"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/textViewServerVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_normal"
            android:fontFamily="@font/poppins_semibold"
            android:visibility="invisible"
            tools:text="Server version:"
            tools:visibility="invisible" />

    </LinearLayout>

</ScrollView>